# gem_prediction

./: README.md  main.py  pyproject.toml
models/: gbr_no_cat.z  gbr_with_cat.z  knr_no_cat.z  knr_with_cat.z  lr_no_cat.z  lr_with_cat.z  scaler_no_cat.z  scaler_with_cat.z  svr_no_cat.z  svr_with_cat.z
notebooks/: gem_ML.ipynb
prediction/: utils.py
templates/: gem.html  prediction.html
