[tool.poetry]
name = "gem-prediction"
version = "0.1.0"
description = ""
authors = ["lurapozo <lurapozo@espol.edu.ec>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
jupyter = "^1.0.0"
seaborn = "^0.13.2"
scikit-learn = "^1.4.1.post1"
joblib = "^1.3.2"
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
